css/styles.css
/* ... */
.portfolio-list {
  display: flex;
  flex-wrap: wrap;
}

.portfolio-item {
  width: 370px;

  margin-right: 30px;
  margin-bottom: 30px;
}

.portfolio-item:nth-child(3n) {
  margin-right: 0;
}

.portfolio-item:nth-last-child(-n + 3) {
  margin-bottom: 0;
}
.portfolio-wrap {
  position: relative;
  overflow: hidden;
}
.portfolio-overlay {
  display: flex;
  align-items: center;
  position: absolute;
  top: 0;
  transform: translateY(100%);

  transition-property: transform;
  transition-duration: var(--transition);
  transition-timing-function: var(--cubic);

  width: 100%;
  height: 100%;
  background-color: rgba(33, 150, 243, 0.9);
  padding: 24px;
  color: var(--btn-text-accent-color);
}
.overlay-description {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  line-height: 1.56;
  letter-spacing: 0.03em;
}

.portfolio-link {
  display: block;
  transition-property: box-shadow;
  transition-duration: var(--transition);
  transition-timing-function: var(--cubic);
}

.portfolio-link:hover,
.portfolio-link:focus {
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
    1px 4px 6px rgba(0, 0, 0, 0.16);
}

.portfolio-link:hover .portfolio-overlay,
.portfolio-link:focus .portfolio-overlay {
  transform: translateY(0%);
}

.portfolio-text {
  font-size: 16px;
  line-height: 1.88;
  letter-spacing: 0.03em;
}

.portfolio-item .link:visited {
  color: var(--main-text-color);
}

.portfolio-container {
  border: 1px solid #eeeeee;
  border-top: 0;
  padding: 20px 24px;
}

